--- a/data-science.html
+++ b/data-science.html
@@ -81,7 +81,7 @@
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692100973-senior-data-scientist'>Publicis Groupe Senior Data Scientist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692100973-senior-data-scientist'>Publicis Groupe Senior Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -95,7 +95,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://pacmed.recruitee.com/o/data-science-internship-msc-or-phd-health-care'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pacmed.recruitee.com/o/data-science-internship-msc-or-phd-health-care'>
       Data Science Internship (MSc or PhD) Health care - Pacmed
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -109,7 +109,7 @@
 <p><span class="badge badge-light">Shanghai Shanghai, China</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://definedcrowd.recruitee.com/o/data-scientist-natural-language-processing'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://definedcrowd.recruitee.com/o/data-scientist-natural-language-processing'>
       Data Scientist ? Natural Language Processing - DefinedCrowd
     </a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
@@ -119,7 +119,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://talpasolutions.join.com/jobs/251352-data-scientist'>Job @ talpasolutions (Essen): Data Scientist | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talpasolutions.join.com/jobs/251352-data-scientist'>Job @ talpasolutions (Essen): Data Scientist | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -204,7 +204,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Stockholm Stockholm Stockholm London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/8451/jobs/4368755002'>Job Application for Lead Data Scientist at 84.51? </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/8451/jobs/4368755002'>Job Application for Lead Data Scientist at 84.51? </a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -242,7 +242,7 @@ and artificial intelligence advances? In an increasingly connected world, massiv
 <p><span class="badge badge-light">Columbus, OH, USA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://westernun.referrals.selectminds.com/jobs/junior-data-scientist-19557'>Junior Data Scientist - Western Union Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westernun.referrals.selectminds.com/jobs/junior-data-scientist-19557'>Junior Data Scientist - Western Union Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Thanks for your interest in the Junior Data Scientist position. Unfortunately this 
 position has been closed but you can search our 172 open jobs by clicking here.</p>
@@ -272,7 +272,7 @@ perform experiments to test the effectiveness of products we build and actions?.
 <p>Jul 15, 2019 ... Data Scientist. R&D / Engineering Raanana, Israel Job Number: 8427. Apply. 
 Position at NICE. Responsibilities: Design and develop software algorithm?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/DAA2DC9722'>OneinaMil - Jobs: Data Science Machine Learning Lead - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/DAA2DC9722'>OneinaMil - Jobs: Data Science Machine Learning Lead - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... ... You will participate in partnerships with data science leaders, like our 
 partnership with NVIDIA to deliver Deep Learning Institute (DLI) training to the 
@@ -314,7 +314,7 @@ federal?...</p>
 <p><span class="badge badge-light">San Mateo California</span></p>
 <p>Posted on:: 2019-07-22</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999692034441-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999692034441-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Michigan, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -339,15 +339,15 @@ federal?...</p>
 <p>Jul 9, 2019 ... You will have the opportunity to leverage Avero's robust historical/real time 
 datasets and machine learning infrastructure to develop and tackle the complex?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bixal/b562b606-2228-4eb1-b1b9-7bdc13b16e49'>Bixal - Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bixal/b562b606-2228-4eb1-b1b9-7bdc13b16e49'>Bixal - Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tubularlabs/f05e4b8f-f0bd-4e85-b648-87603aeb322c'>Tubular Labs - Data Scientist</a></h5> 
+<h5><a href='https://jobs.lever.co/tubularlabs/f05e4b8f-f0bd-4e85-b648-87603aeb322c'>Tubular Labs - Data Scientist</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999692071934-principal-data-scientist'>Bey Principal Data Scientist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999692071934-principal-data-scientist'>Bey Principal Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -365,7 +365,7 @@ datasets and machine learning infrastructure to develop and tackle the complex?.
 engineer. Your work will impact millions of our customers. As part of the 
 Marketing?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/nicesystems/job/osBzafww'>NICE Careers - Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/nicesystems/job/osBzafww'>NICE Careers - Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -402,7 +402,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tempus/jobs/4364057002'>Job Application for Data Scientist, Applied Machine Learning - Bay Area at Tempus</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tempus/jobs/4364057002'>Job Application for Data Scientist, Applied Machine Learning - Bay Area at Tempus</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
